--- a/SemanadaTecnologia/app/src/main/res/values/colors.xml
+++ b/SemanadaTecnologia/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorRed">#ff0303</color>
+    <color name="colorDarkRed">#b10606</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="mtrl_textinput_default_box_stroke_color">#d3a30404</color>
 </resources>
