--- a/SemanadaTecnologia/app/src/main/res/layout/activity_camera.xml
+++ b/SemanadaTecnologia/app/src/main/res/layout/activity_camera.xml
@@ -7,12 +7,24 @@
     android:layout_height="match_parent">
 
 
+    <android.support.v7.widget.CardView
+        android:id="@+id/cardView4"
+        android:layout_width="0dp"
+        android:layout_height="150dp"
+        android:elevation="1dp"
+        app:cardBackgroundColor="@color/colorBlack"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/btn_foto" />
+
     <Button
         android:id="@+id/btn_trocar_camera"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginBottom="40dp"
         android:layout_marginEnd="8dp"
+        android:elevation="10dp"
         android:layout_marginStart="8dp"
         android:background="@drawable/btn_trocarcamera"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -27,6 +39,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:background="@drawable/btn_camera"
+        android:elevation="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -35,12 +48,12 @@
         android:id="@+id/frameCamera"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/cardView4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintTop_toTopOf="parent">
 
     </FrameLayout>
+
 </android.support.constraint.ConstraintLayout>
