--- a/SemanadaTecnologia/app/src/main/res/layout/activity_visualizar_foto.xml
+++ b/SemanadaTecnologia/app/src/main/res/layout/activity_visualizar_foto.xml
@@ -24,10 +24,12 @@
 
 
         <ImageView
-            android:id="@+id/imageView5"
+            android:id="@+id/preview_img"
             android:layout_width="match_parent"
             android:layout_height="270dp"
-            app:srcCompat="@drawable/senaijandira" />
+            android:scaleType="fitXY"
+            android:background="@drawable/senaijandira"
+            app:srcCompat="@drawable/filtro" />
     </android.support.v7.widget.CardView>
 
 
