Versão 07 - Opções de filtros e intent para Stories do Instagram

--- a/SemanadaTecnologia/app/src/main/res/drawable-mdpi/btn_voltar.xml
+++ b/SemanadaTecnologia/app/src/main/res/drawable-mdpi/btn_voltar.xml
@@ -9,7 +9,7 @@
         </shape>
     </item>
 
-    <item android:drawable="@drawable/ic_voltar">
+    <item android:drawable="@drawable/ic_cancel">
 
 
     </item>
