--- a/SemanadaTecnologia/app/src/main/res/drawable-mdpi/btn_avancar.xml
+++ b/SemanadaTecnologia/app/src/main/res/drawable-mdpi/btn_avancar.xml
@@ -9,7 +9,7 @@
         </shape>
     </item>
 
-    <item android:drawable="@drawable/ic_avancar">
+    <item android:drawable="@drawable/ic_check">
 
 
     </item>
